# vs-cmake-ninja-bug-3

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/root/prog/: main.cpp
src/targets/lib/: CMakeLists.txt
src/targets/prog/: CMakeLists.txt
src/targets/proj/subfolder/: CMakeLists.txt
